可以使用的 dump